removing internal auditing

--- a/ar/index.html
+++ b/ar/index.html
@@ -163,7 +163,7 @@
                         <div class="timeline-image">
                             <img class="img-circle img-responsive" src="img/about/6.jpg" alt="">
                         </div>
-                        <div class="timeline-panel">
+                        <div class="time<div class="row text-center">line-panel">
                             <div class="timeline-heading">
                                 <h4>مكاتبنا</h4>
                             </div>
@@ -197,14 +197,6 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
-                        <i class="fa fa-search fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">المراجعة الداخلية</h4>
-                    <p class="text-muted">تتوجه الكثير من المنشآت إلى خصخصة المراجعة الداخلية وذلك عن طريق تكليف مكاتب أو شركات مهنية للقيام بها، لهذا سعياً منا قمنا بإنشاء قسم خاص لهذا الغرض مؤهل لتقديم خدمات المراجعة الداخلية لعملائنا والتي تركز على رفع كفاءة وفعالية الأداء ومصداقية وموثوقية التقارير المالية والتأكد من إتباع الأنظمة والقوانين التي تتبع لها المنشأة وقد قدمنا هذه الخدمة للعديد من كبار العملاء لدينا.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-square fa-stack-2x text-primary"></i>
                         <i class="fa fa-bank fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">الأنظمة المالية والإدارية</h4>
@@ -218,8 +210,6 @@
                     <h4 class="service-heading">تقييم الشركات</h4>
                     <p class="text-muted">في بيئة الأعمال التجارية المتطورة كثرت عمليات تقييم الشركات والتي نتجت عن العديد من الأسباب منها على سبيل المثال لا الحصر الإندماجات والسيطرة والشركات العائلية خصوصاً الدخول والخروج منها كل هذه العمليات تستدعي أن يتم تقييم الشركات القائمة بسعر عادل بإستخدام طرق التقييم المعروفة وهنا يظهر مستشارونا الماليون الأكفاء القادرين على إختيار أنسب طرق التقييم لإعطاء كل ذي حق حقه.</p>
                 </div>
-            </div>
-            <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
@@ -228,7 +218,8 @@
                     <h4 class="service-heading">دراسة الجدوى الإقتصادية</h4>
                     <p class="text-muted">القيام بالإشراف على إعداد دراسات الجدوى الإقتصادية للمشاريع تحت التأسيس بالطرق الميدانية والأساليب العلمية بحيث تكون الدراسة الدليل الواضح لصاحب العمل في إتخاذ القرار السليم. كما أن إهتمام الدولة بالمنشآت المتوسطة والصغيرة بالإضافة إلى إحتياج هذه المنشآت إلى التمويل لفتح سوق واسعة لعمليات دراسات الجدوى الإقتصادية.</p>
                 </div>
-                
+            </div>
+            <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
@@ -245,8 +236,6 @@
                     <h4 class="service-heading">وضع الخطط الإستراتيجية وتقييم الأداء</h4>
                     <p class="text-muted">يتم إعداد الخطط الإستراتيجية طويلة المدى وقصيرة المدى التي تناسب المنشآت وتتماشى مع طبيعة نشاطها وتحقق لها الأهداف المطلوبة والمحددة سلفاً من قبل مجالس إداراتها كما يتم تقييم هذه الخطط خلال مراحل التنفيذ وتحديد أسباب الانحرافات والعمل على معالجتها كما يتم تقييم أداء العاملين وإيضاح طرق رفع كفاءتهم الإنتاجية.</p>
                 </div>
-            </div>
-            <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
@@ -255,6 +244,8 @@
                     <h4 class="service-heading">تحويل الشركات وتكوينها</h4>
                     <p class="text-muted">أنتشرت في الآونه الأخيرة ظاهرة تحويل الشركات وخصوصاً الشركات العائلية منها من شركات ذات مسؤولية محدودة إلى شركات مساهمة مقفلة وهذا التحويل يستدعي إجراءات ذات طبيعة مالية وإدارية وقانونية وقد كنا من أوائل الشركات التي إتجهت لهذا المجال كما أن تأسيس الشركات الجديدة هو جزء من هذا النشاط أياً كان نوعها.</p>
                 </div>
+            </div>
+            <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
@@ -271,8 +262,6 @@
                     <h4 class="service-heading">الضريبة المضافة</h4>
                     <p class="text-muted">وهي الضريبة التي تفرض على المبيعات أو الإستهلاك النهائي للسلعة وهي تضاف على سوق السلعة، وسيتم طرحها في المملكة العربية السعودية إبتداءً من 1 يناير 2018 وإن فريق عملنا بدأ للتجهيز لهذا العمل ليخدم عملائه على أحسن وجه مستفيداً من خبرة موظفينا وشراكتنا العالمية ومعرفتهم بهذا النوع من الضرائب وخاصة بالدول الشقيقة وإن مكتبنا جاهز لتقديم هذا النوع من الخدمات عندما يتم إقرارها وتطبيقها.</p>
                 </div>
-            </div>
-            <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
@@ -281,6 +270,8 @@
                     <h4 class="service-heading">إدارة وتقييم المخاطر</h4>
                     <p class="text-muted">  قياس وتقييم وتحديد المخاطر التي تواجهها المنشآت ووضع الحلول الوقائية والخطط الإستراتيجية لمواجهة وإدارة هذه المخاطر وتجنبها وتقليل آثارها السلبية بقدر الإمكان.</p>
                 </div>
+            </div>
+            <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
@@ -297,8 +288,6 @@
                     <h4 class="service-heading">تقديم الحلول المالية</h4>
                     <p class="text-muted">تقديم الإستشارات المالية في مجال الإدارة المالية لصغار العملاء الذين لا تتيح لهم إمكانياتهم إستخدام مدراء ماليين وذلك لتحسين الملاءة المالية تجاه الممولين والموردين.</p>
                 </div>
-            </div>
-            <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-square fa-stack-2x text-primary"></i>
